Test searchWithIngredients completed, fixes in IngredientTest